<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.models.ShoeViewModel" />
    </data>

    <FrameLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShoeDetail"
        android:orientation="vertical"
        android:id="@+id/shoeDetail">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/input_detail"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/etext_shoe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_shoe_name"
                android:inputType="text"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"/>

            <EditText
                android:id="@+id/etext_shoe_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_company"
                android:inputType="text"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_size"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"/>

            <EditText
                android:id="@+id/etext_shoe_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_size"
                android:inputType="numberDecimal"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_description"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"/>

            <EditText
                android:id="@+id/etext_shoe_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description"
                android:inputType="text"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="4dp">

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_cancel"
                    android:layout_marginRight="8dp"
                    android:background="@color/redMahogany"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_save"
                    android:background="@color/green"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>